# rust-playground

crawler/: .pre-commit-config.yaml  Cargo.toml
crawler/src/: main.rs
crawler/src/engine/: fetcher.rs  mod.rs  model.rs  parser.rs  translate.rs
queryer/: Cargo.toml
queryer/queryer-py/: Cargo.toml  README.md
queryer/queryer-py/sample_csv/: file.csv
queryer/queryer-py/src/: lib.rs
queryer/sqlr/: Cargo.toml
queryer/sqlr/examples/: covid.rs  dialect.rs
queryer/sqlr/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs
rusimg/: Cargo.toml  build.rs
rusimg/src/: main.rs
rusimg/src/engine/: photon.rs
rusimg/src/pb/: abi.proto  mod.rs
rusttpie/: Cargo.toml
rusttpie/src/: main.rs
rusttpie/themes/: Material-Theme-Darker.tmdump  One Dark.tmdump  brogrammer.tmTheme  brogrammer.tmdump
scrape_url/src/: main.rs
sqlr/examples/: covid.rs  dialect.rs
sqlr/src/: convert.rs  dialect.rs
